--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,9 @@ env_logger = "0.9.0"
 log = "0.4.16"
 
 meilisearch-sdk = "0.15.0"
-lazy_static = "1.4.0"
+once_cell = "1.10.0"
 serde = { version = "1.0.136", features = ["derive"] }
 
 uuid = { version = "0.8.2", features = ["serde", "v4"] }
+
+anyhow = "1.0.56"
