--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,4 @@ serde = { version = "1.0.136", features = ["derive"] }
 uuid = { version = "0.8.2", features = ["serde", "v4"] }
 
 anyhow = "1.0.56"
+serde_json = "1.0.79"
