--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ log = "0.4.16"
 meilisearch-sdk = "0.15.0"
 once_cell = "1.10.0"
 serde = { version = "1.0.136", features = ["derive"] }
+base64-serde = "0.6.1"
 
 uuid = { version = "0.8.2", features = ["serde", "v4"] }
 
@@ -24,3 +25,5 @@ webp = "0.2.2"
 
 anyhow = "1.0.56"
 serde_json = "1.0.79"
+
+base64 = "0.13.0"
