--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,9 @@ actix-web = "4.0.1"
 actix-files = "0.6.0"
 actix-session = "0.6.2"
 actix-cors = "0.6.1"
+actix-multipart = "0.4.0"
+
+futures-util = { version = "0.3.21", default-features = false, features = ["std"] }
 
 env_logger = "0.9.0"
 log = "0.4.16"
