--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ actix-multipart = "0.4.0"
 
 futures-util = { version = "0.3.21", default-features = false, features = ["std"] }
 
+reqwest = "0.11.10"
+
 env_logger = "0.9.0"
 log = "0.4.16"
 
